--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -6,8 +6,12 @@ on:
     branches:
       - main
       - 'feature/*'
-    
-jobs:
+     
+env:
+  MONGO_URI: mongodb+srv://supercluster.d83jj.mongodb.net/superData 
+  MONGO_USERNAME: superuser   
+  MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+jobs: 
     unit-testing:
         name: Unit Testing
         runs-on: ubuntu-latest
