added coverage job

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -36,3 +36,29 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+
+    code-coverage:
+        name: code coverage test
+        runs-on: ubuntulatest        
+        steps:
+        - name: Checkout Repo
+          uses: actions/checkout@v4
+
+        - name: Setiup NodeJs Version  
+          uses: actions/setup-node@v4
+          with:
+            node-version: 18
+
+        - name: Install Dependencies
+          run: npm install
+          
+        - name: Run Code Coverage
+          run: npm run coverage
+          continue-on-error: true
+          
+        - name: Upload code-coverage
+          uses: actions/upload-artifact@v4
+          with: 
+            name: Code-Coverage-result
+            path: coverage
+            retention-days: 5
