--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -27,8 +27,8 @@ jobs:
         - name: Cache NPM dependencies
           uses: actions/cache@v3
           with:
-            path: ~./path
-            key: '${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}'    
+            path: ~/.npm
+            key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}  
     
         - name: Install Dependencies
           run: npm install
