--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -84,5 +84,5 @@ jobs:
             with:
               context: .
               push: true
-              tags: gchr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}  
+              tags: 'gchr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}' 
                       
