--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -70,6 +70,8 @@ jobs:
 
     docker:
         name: docker
+        permissions:
+          packages: write #added
         runs-on: ubuntu-latest
         needs: [code-coverage, unit-testing]
         steps: 
