--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -69,22 +69,23 @@ jobs:
             retention-days: 5
 
     docker:
-        name: docker
-        permissions:
-          packages: write #added
-        runs-on: ubuntu-latest
-        needs: [code-coverage, unit-testing]
-        steps: 
-          - name: Checkout Repo
-            uses: actions/checkout@v4
-          - uses: docker/login-action@v2.2.0
-            with:
-              registry: ghcr.io
-              username: ${{ github.repository_owner }}
-              password:  ${{ secrets.GITHUB_TOKEN }}
-          - uses: docker/build-push-action@v4
-            with:
-              context: .
-              push: true
-              tags: 'gchr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}' 
-                      
+      permissions: #added
+        packages: write #added
+      runs-on: ubuntu-latest
+      needs:
+        - code-coverage
+        - unit-testing
+      steps:
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v2.2.0
+        with:
+          registry: ghcr.io
+          username: '${{ github.repository_owner }}'
+          password: '${{ secrets.GITHUB_TOKEN }}'
+      - uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'  
+
+               
