--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -68,24 +68,26 @@ jobs:
             path: coverage
             retention-days: 5
 
+    
     docker:
-      permissions: #added
-        packages: write #added
+      permissions:
+        packages: write
       runs-on: ubuntu-latest
       needs:
         - code-coverage
         - unit-testing
       steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3  
       - uses: docker/login-action@v2.2.0
         with:
           registry: ghcr.io
           username: '${{ github.repository_owner }}'
-          password: '${{ secrets.GITHUB_TOKEN }}'
+          password: '${{ secrets.github }}'         
+          
       - uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'  
+          tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'     
 
                
