--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -82,7 +82,7 @@ jobs:
         with:
           registry: ghcr.io
           username: '${{ github.repository_owner }}'
-          password: '${{ secrets.github }}'         
+          password: '${{ secrets.GITHUB_TOKEN }}'         
           
       - uses: docker/build-push-action@v4
         with:
