--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -90,4 +90,24 @@ jobs:
           push: true
           tags: 'ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}'     
 
-               
+    dev-deploy:
+      runs-on: ubuntu-latest
+      needs: [docker] 
+      environment:
+        name: development  
+      steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4 
+        
+      - uses: azure/setup-kubectl@v3
+        with:
+           version: 'v1.26.0'
+      - uses: azure/k8s-set-context@v4
+        with:
+           method: kubeconfig
+           kubeconfig: ${{ secrets.KUBECONFIG }}
+      
+      - name: verify kubectl setup
+        run: kubectl version --short -o yaml     
+           
+           
