--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -101,6 +101,14 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha
             }}
           INGRESS_IP: '${{ env.INGRESS_IP }}'
-      - run: cat kubernetes/development/*.yaml    
+      - run: cat kubernetes/development/*.yaml
+      
+  # dev-deploy job
+  integration-test:
+    needs: dev-deploy
+    uses: ./.github/workflows/reusable-workflow.yml
+    with:
+      ingress-url: ${{ needs.dev-deploy.outputs.APP_INGRESS_URL }}
+  # next job   
            
            
