added continue on error to dev-deploy job

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -72,6 +72,7 @@ jobs:
   dev-deploy:
     needs: docker
     runs-on: ubuntu-latest
+    continue-on-error: true
     environment:
       name: development
     steps:
